--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import-normalize; /* bring in normalize.css styles */
 
+:root {
+  --color-primary-text: #000000;
+  --color-secondary-text: #778899;
+  --background-color-primary: #ffffff;
+  --background-color-secondary: #f0f8ff;
+  --background-color: #e6e6fa;
+  --color-blue: #6495ed;
+  --color-purple: #8a2be2;
+  --color-colar: #f08080;
+  --color-sea: #20b2aa;
+  --color-red: #ff0000;
+  --color-green: #008000;
+  --color-sky: #87cefa;
+  --color-light-sky: #caeafd;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,9 +23,36 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background-color);
+  color: var(--color-primary-text);
+  display: flex;
+  justify-content: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul, ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
