--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -2,7 +2,7 @@
     padding: 15px;
     background-color: var(--background-color-primary);
     border-radius: 5px;
-    max-width: 350px;
+    width: 300px;
 }
 .avatar {
     width: 150px;
