--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -21,7 +21,7 @@
     margin-top: 10px;
     background-color: var(--color-blue);
     color: var(--background-color-primary);
-    flex: 0 1 200px;
+    flex: 1 1;
     flex-direction: column;
      margin-right: 2px;
     padding-bottom: 20px;
