--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --color-red: #ff0000;
   --color-green: #008000;
   --color-sky: #87cefa;
-  --color-light-sky: #caeafd;
+  --color-light-sky: #e7f5fe;
 }
 
 body {
