--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -27,3 +27,12 @@
     padding-bottom: 20px;
     padding-top: 20px;
 }
+.item:nth-child(2), .item:nth-child(5) {
+    background-color: var(--color-purple);
+}
+.item:nth-child(3) {
+    background-color: var(--color-colar);
+}
+.item:nth-child(4) {
+    background-color: var(--color-sea);
+}
